Corrected z-index of header, hero, and mobile-menu. Mobile menu now flies from the top instead of the side.

--- a/css/main.css
+++ b/css/main.css
@@ -610,7 +610,6 @@ a {
   max-width: 1200px;
   padding: 13.5px;
   padding: 0.75rem;
-  position: relative;
   z-index: 1; }
   .container::after {
     clear: both;
@@ -657,7 +656,8 @@ a {
   background: #4f4f4f;
   background-image: url("/img/bokeh.png"), linear-gradient(to right, #0e0e0e 0%, #7d7e7d 68%, #4f4f4f 100%);
   text-align: center;
-  overflow: hidden; }
+  overflow: hidden;
+  position: relative; }
   .hero::after {
     clear: both;
     content: "";
@@ -672,7 +672,7 @@ a {
     float: left; }
     @media (max-width: 719px) {
       .hero__text {
-        padding: 0;
+        padding: 0.5rem 0;
         background: rgba(0, 0, 0, 0.67);
         position: absolute;
         float: none;
@@ -705,10 +705,9 @@ a {
 .header {
   padding: 0;
   box-shadow: 0 9px 9px rgba(51, 51, 51, 0.6);
-  background-color: #fff;
   position: relative;
-  text-align: center;
-  z-index: 2; }
+  background: #fff;
+  text-align: center; }
   .header::after {
     clear: both;
     content: "";
@@ -723,7 +722,9 @@ a {
   margin: 0 auto;
   position: relative;
   text-align: center;
-  padding: 1em; }
+  padding: 1em;
+  background-color: #fff;
+  z-index: 20; }
 
 .nav__checkbox {
   display: none; }
@@ -742,11 +743,12 @@ a {
   @media (max-width: 719px) {
     .header-menu {
       position: absolute;
-      transform: translateX(-100%);
+      transform: translateY(-100%);
       transition: .275s all;
+      z-index: 15;
       box-shadow: 0 9px 9px rgba(51, 51, 51, 0.6); }
       .header-menu.open {
-        transform: translateX(0%); } }
+        transform: translateY(0%); } }
 
 .header-menu-items {
   display: inline-block;
@@ -764,8 +766,7 @@ a {
       background: rgba(176, 200, 222, 0.95);
       margin-top: 0;
       margin-bottom: 0;
-      transition: .2s all;
-      transform: rotateZ(0); }
+      transition: .2s all; }
       .header-menu-items.open {
         opacity: 1;
         visibility: visible; } }
@@ -812,10 +813,10 @@ a {
 .mobile-menu {
   background: #fff;
   font-weight: bold;
-  margin-top: 6.75px;
-  margin-top: 0.375rem;
   padding: 6.75px;
-  padding: 0.375rem; }
+  padding: 0.375rem;
+  z-index: 20;
+  position: relative; }
 
 .current_page_item > a {
   cursor: default;
@@ -925,7 +926,7 @@ label {
   .timer__box,
   .timer__smalltext {
     width: 50px;
-    font-size: 85%; } }
+    font-size: 90%; } }
 
 .download-item {
   display: inline-block;
