--- a/sass/components/_timer.scss
+++ b/sass/components/_timer.scss
@@ -13,6 +13,6 @@
 .timer__smalltext {
   @include media('<md') {
     width: 50px;
-    font-size: 85%;
+    font-size: 90%;
   }
 }
